[workspace]
members = ["gateway"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
config = "0.15.25"
code0-flow = { version = "0.0.40", features = ["flow_telemetry"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync"] }
tonic = "0.14.6"
tonic-health = "0.14.6"
tucana = { path = "../tucana/build/rust", features = ["sagittarius_gateway", "sagittarius_rails"] }
