[package]
name = "gateway"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true }
jsonwebtoken = "10.4.0"
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = "0.14.6"
tucana = { workspace = true }
